# pediatric-asthma-ventilation-simulator

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: parameter_source_traceability_v1_8_1.csv  verified_references_v1_8_1.csv
docs/: bibliography_verification_report_v1_4_snapshot.md  independent_audit_v1_5_remediation.md  pre_submission_checklist_v1_4_snapshot.md  reference_claim_audit_v1_4_snapshot.md  release_audit_v1_4_submission_snapshot.md  remediation_checklist_v1_5.md  remediation_checklist_v1_6.md  remediation_checklist_v1_7.md  remediation_checklist_v1_8.md  remediation_checklist_v1_8_1.md  roadmap_v1_3_physiology_fix.md
manuscript/: figure_captions_v1_8_1.md  full_manuscript_draft_v1_8_1.md  references_v1_8_1.md  supplementary_v1_8_1.md
outputs/v1_8_1/: excess_external_peep_passive_timeseries.csv  figure_high_rr_dynamic_hyperinflation_v1_8_1.csv  figure_post_intubation_collapse_v1_8_1.csv  peep_sweep_spontaneous_v1_8_1.csv  (+15 more)
scripts/: reproduce_all.py
src/: compare_strategies.py  generate_paper_figures.py  run_all_scenarios.py  run_scenario.py  sensitivity_analysis.py
tests/: test_input_validation_v1_8_1.py  test_invariants_v1_8_1.py  test_modes_v1_8_1.py  test_packaging_v1_8_1.py  test_physiology_acceptance_v1_8_1.py  test_release_hygiene_v1_8_1.py  test_release_integrity_v1_8_1.py  test_release_schema_v1_8_1.py  test_reproducibility_v1_8_1.py  test_schema_completeness_v1_8_1.py  test_streamlit_smoke_v1_8_1.py
(+15 files in other folders)
